// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Column correctly 1`] = `
<div
  data-radium={true}
>
  <div>
    <div
      className="rmq-5cd7f856 rmq-47404869 rmq-973b1098 rmq-9240b48f rmq-25d1aa40 rmq-9dca7bab"
      data-radium={true}
      style={
        Object {
          "display": "inline-block",
        }
      }
    />
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "@media (max-width: 767px){ .rmq-5cd7f856{display: block !important;
width: 100% !important;}}
@media (min-width: 768px) and (max-width: 831px){ .rmq-47404869{width: 312px !important;}}
@media (min-width: 832px) and (max-width: 1039px){ .rmq-973b1098{width: 312px !important;}}
@media (min-width: 1040px) and (max-width: 1247px){ .rmq-9240b48f{width: 312px !important;}}
@media (min-width: 1248px) and (max-width: 1455px){ .rmq-25d1aa40{width: 312px !important;}}
@media (min-width: 1456px){ .rmq-9dca7bab{width: 312px !important;}}",
      }
    }
  />
</div>
`;

exports[`renders Column multi-sizes correctly 1`] = `
<div
  data-radium={true}
>
  <div
    data-radium={true}
  >
    <div
      className="rmq-5cd7f856 rmq-3f38d303 rmq-a537bb32 rmq-e4ec3e25 rmq-357c0e23 rmq-b506d16c"
      data-radium={true}
      style={
        Object {
          "display": "inline-block",
        }
      }
    />
    <div
      className="rmq-5cd7f856 rmq-3f38d303 rmq-a537bb32 rmq-e4ec3e25 rmq-357c0e23 rmq-b506d16c"
      data-radium={true}
      style={
        Object {
          "display": "inline-block",
        }
      }
    />
    <div
      className="rmq-5cd7f856 rmq-3f38d303 rmq-a537bb32 rmq-e4ec3e25 rmq-357c0e23 rmq-5276bdc8"
      data-radium={true}
      style={
        Object {
          "display": "inline-block",
        }
      }
    />
    <div
      className="rmq-5cd7f856 rmq-ac9c14ac rmq-a537bb32 rmq-e4ec3e25 rmq-357c0e23 rmq-b506d16c"
      data-radium={true}
      style={
        Object {
          "display": "inline-block",
        }
      }
    />
    <div
      className="rmq-5cd7f856 rmq-3f38d303 rmq-a537bb32 rmq-e4ec3e25 rmq-661a236a rmq-b506d16c"
      data-radium={true}
      style={
        Object {
          "display": "inline-block",
        }
      }
    />
    <div
      className="rmq-5cd7f856 rmq-136ec809 rmq-a537bb32 rmq-e4ec3e25 rmq-661a236a rmq-50ca1bee"
      data-radium={true}
      style={
        Object {
          "display": "inline-block",
        }
      }
    />
    <div
      className="rmq-5cd7f856 rmq-ac9c14ac rmq-3dd19af8 rmq-a7b62b2f rmq-94827ce0 rmq-9dca7bab"
      data-radium={true}
      style={
        Object {
          "display": "inline-block",
        }
      }
    />
    <div
      className="rmq-5cd7f856 rmq-136ec809 rmq-a28a9a9b rmq-aed301ec rmq-357c0e23 rmq-89c5614"
      data-radium={true}
      style={
        Object {
          "display": "inline-block",
        }
      }
    />
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "@media (max-width: 767px){ .rmq-5cd7f856{display: block !important;
width: 100% !important;}}
@media (min-width: 768px) and (max-width: 831px){ .rmq-3f38d303{width: 208px !important;}}
@media (min-width: 832px) and (max-width: 1039px){ .rmq-a537bb32{width: 208px !important;}}
@media (min-width: 1040px) and (max-width: 1247px){ .rmq-e4ec3e25{width: 208px !important;}}
@media (min-width: 1248px) and (max-width: 1455px){ .rmq-357c0e23{width: 416px !important;}}
@media (min-width: 1456px){ .rmq-b506d16c{width: 520px !important;}}
@media (min-width: 1456px){ .rmq-5276bdc8{width: 416px !important;}}
@media (min-width: 768px) and (max-width: 831px){ .rmq-ac9c14ac{width: 104px !important;}}
@media (min-width: 1248px) and (max-width: 1455px){ .rmq-661a236a{width: 208px !important;}}
@media (min-width: 768px) and (max-width: 831px){ .rmq-136ec809{width: 624px !important;}}
@media (min-width: 1456px){ .rmq-50ca1bee{width: 104px !important;}}
@media (min-width: 832px) and (max-width: 1039px){ .rmq-3dd19af8{width: 624px !important;}}
@media (min-width: 1040px) and (max-width: 1247px){ .rmq-a7b62b2f{width: 624px !important;}}
@media (min-width: 1248px) and (max-width: 1455px){ .rmq-94827ce0{width: 624px !important;}}
@media (min-width: 1456px){ .rmq-9dca7bab{width: 312px !important;}}
@media (min-width: 832px) and (max-width: 1039px){ .rmq-a28a9a9b{width: 416px !important;}}
@media (min-width: 1040px) and (max-width: 1247px){ .rmq-aed301ec{width: 416px !important;}}
@media (min-width: 1456px){ .rmq-89c5614{width: 1248px !important;}}",
      }
    }
  />
</div>
`;

exports[`renders Column sizes correctly 1`] = `
<div
  data-radium={true}
>
  <div
    data-radium={true}
  >
    <div
      className="rmq-5cd7f856 rmq-ac9c14ac rmq-3a274cbd rmq-b27e050a rmq-233fc1c5 rmq-50ca1bee"
      data-radium={true}
      style={
        Object {
          "display": "inline-block",
        }
      }
    />
    <div
      className="rmq-5cd7f856 rmq-3f38d303 rmq-a537bb32 rmq-e4ec3e25 rmq-661a236a rmq-ed86e841"
      data-radium={true}
      style={
        Object {
          "display": "inline-block",
        }
      }
    />
    <div
      className="rmq-5cd7f856 rmq-47404869 rmq-973b1098 rmq-9240b48f rmq-25d1aa40 rmq-9dca7bab"
      data-radium={true}
      style={
        Object {
          "display": "inline-block",
        }
      }
    />
    <div
      className="rmq-5cd7f856 rmq-ce88c58a rmq-a28a9a9b rmq-aed301ec rmq-357c0e23 rmq-5276bdc8"
      data-radium={true}
      style={
        Object {
          "display": "inline-block",
        }
      }
    />
    <div
      className="rmq-5cd7f856 rmq-1e34b62e rmq-7109cf7f rmq-f6c2fa88 rmq-93b93ac7 rmq-b506d16c"
      data-radium={true}
      style={
        Object {
          "display": "inline-block",
        }
      }
    />
    <div
      className="rmq-5cd7f856 rmq-136ec809 rmq-3dd19af8 rmq-a7b62b2f rmq-94827ce0 rmq-74bb2c4b"
      data-radium={true}
      style={
        Object {
          "display": "inline-block",
        }
      }
    />
    <div
      className="rmq-5cd7f856 rmq-d7c444e4 rmq-79d20ff5 rmq-11474c42 rmq-8945d40d rmq-1c3f79a6"
      data-radium={true}
      style={
        Object {
          "display": "inline-block",
        }
      }
    />
    <div
      className="rmq-5cd7f856 rmq-8e14fc00 rmq-816a7dd1 rmq-593bc066 rmq-c1b74d29 rmq-56735f42"
      data-radium={true}
      style={
        Object {
          "display": "inline-block",
        }
      }
    />
    <div
      className="rmq-5cd7f856 rmq-ed5bd5a5 rmq-e891cd54 rmq-50254fc3 rmq-9517a58c rmq-d596a367"
      data-radium={true}
      style={
        Object {
          "display": "inline-block",
        }
      }
    />
    <div
      className="rmq-5cd7f856 rmq-15640cdc rmq-89b2910d rmq-b3aaa63a rmq-cb3106f5 rmq-9d88fe9e"
      data-radium={true}
      style={
        Object {
          "display": "inline-block",
        }
      }
    />
    <div
      className="rmq-5cd7f856 rmq-6ffc8619 rmq-26b4ee8 rmq-1cf4813f rmq-9c0d2f0 rmq-2666965b"
      data-radium={true}
      style={
        Object {
          "display": "inline-block",
        }
      }
    />
    <div
      className="rmq-5cd7f856 rmq-d9739156 rmq-e1d1a2c7 rmq-dcc57bb0 rmq-2e8763ff rmq-89c5614"
      data-radium={true}
      style={
        Object {
          "display": "inline-block",
        }
      }
    />
    <div
      className="rmq-5cd7f856 rmq-e41476bc rmq-370024ad rmq-67dfff1a rmq-d8a1bbd5 rmq-986d29fe"
      data-radium={true}
      style={
        Object {
          "display": "inline-block",
        }
      }
    />
    <div
      className="rmq-5cd7f856 rmq-e12aadff rmq-6f2cecce rmq-c5823e19 rmq-9ef44e56 rmq-7dcad03d"
      data-radium={true}
      style={
        Object {
          "display": "inline-block",
        }
      }
    />
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "@media (max-width: 767px){ .rmq-5cd7f856{display: block !important;
width: 100% !important;}}
@media (min-width: 768px) and (max-width: 831px){ .rmq-ac9c14ac{width: 104px !important;}}
@media (min-width: 832px) and (max-width: 1039px){ .rmq-3a274cbd{width: 104px !important;}}
@media (min-width: 1040px) and (max-width: 1247px){ .rmq-b27e050a{width: 104px !important;}}
@media (min-width: 1248px) and (max-width: 1455px){ .rmq-233fc1c5{width: 104px !important;}}
@media (min-width: 1456px){ .rmq-50ca1bee{width: 104px !important;}}
@media (min-width: 768px) and (max-width: 831px){ .rmq-3f38d303{width: 208px !important;}}
@media (min-width: 832px) and (max-width: 1039px){ .rmq-a537bb32{width: 208px !important;}}
@media (min-width: 1040px) and (max-width: 1247px){ .rmq-e4ec3e25{width: 208px !important;}}
@media (min-width: 1248px) and (max-width: 1455px){ .rmq-661a236a{width: 208px !important;}}
@media (min-width: 1456px){ .rmq-ed86e841{width: 208px !important;}}
@media (min-width: 768px) and (max-width: 831px){ .rmq-47404869{width: 312px !important;}}
@media (min-width: 832px) and (max-width: 1039px){ .rmq-973b1098{width: 312px !important;}}
@media (min-width: 1040px) and (max-width: 1247px){ .rmq-9240b48f{width: 312px !important;}}
@media (min-width: 1248px) and (max-width: 1455px){ .rmq-25d1aa40{width: 312px !important;}}
@media (min-width: 1456px){ .rmq-9dca7bab{width: 312px !important;}}
@media (min-width: 768px) and (max-width: 831px){ .rmq-ce88c58a{width: 416px !important;}}
@media (min-width: 832px) and (max-width: 1039px){ .rmq-a28a9a9b{width: 416px !important;}}
@media (min-width: 1040px) and (max-width: 1247px){ .rmq-aed301ec{width: 416px !important;}}
@media (min-width: 1248px) and (max-width: 1455px){ .rmq-357c0e23{width: 416px !important;}}
@media (min-width: 1456px){ .rmq-5276bdc8{width: 416px !important;}}
@media (min-width: 768px) and (max-width: 831px){ .rmq-1e34b62e{width: 520px !important;}}
@media (min-width: 832px) and (max-width: 1039px){ .rmq-7109cf7f{width: 520px !important;}}
@media (min-width: 1040px) and (max-width: 1247px){ .rmq-f6c2fa88{width: 520px !important;}}
@media (min-width: 1248px) and (max-width: 1455px){ .rmq-93b93ac7{width: 520px !important;}}
@media (min-width: 1456px){ .rmq-b506d16c{width: 520px !important;}}
@media (min-width: 768px) and (max-width: 831px){ .rmq-136ec809{width: 624px !important;}}
@media (min-width: 832px) and (max-width: 1039px){ .rmq-3dd19af8{width: 624px !important;}}
@media (min-width: 1040px) and (max-width: 1247px){ .rmq-a7b62b2f{width: 624px !important;}}
@media (min-width: 1248px) and (max-width: 1455px){ .rmq-94827ce0{width: 624px !important;}}
@media (min-width: 1456px){ .rmq-74bb2c4b{width: 624px !important;}}
@media (min-width: 768px) and (max-width: 831px){ .rmq-d7c444e4{width: 728px !important;}}
@media (min-width: 832px) and (max-width: 1039px){ .rmq-79d20ff5{width: 728px !important;}}
@media (min-width: 1040px) and (max-width: 1247px){ .rmq-11474c42{width: 728px !important;}}
@media (min-width: 1248px) and (max-width: 1455px){ .rmq-8945d40d{width: 728px !important;}}
@media (min-width: 1456px){ .rmq-1c3f79a6{width: 728px !important;}}
@media (min-width: 768px) and (max-width: 831px){ .rmq-8e14fc00{width: 832px !important;}}
@media (min-width: 832px) and (max-width: 1039px){ .rmq-816a7dd1{width: 832px !important;}}
@media (min-width: 1040px) and (max-width: 1247px){ .rmq-593bc066{width: 832px !important;}}
@media (min-width: 1248px) and (max-width: 1455px){ .rmq-c1b74d29{width: 832px !important;}}
@media (min-width: 1456px){ .rmq-56735f42{width: 832px !important;}}
@media (min-width: 768px) and (max-width: 831px){ .rmq-ed5bd5a5{width: 936px !important;}}
@media (min-width: 832px) and (max-width: 1039px){ .rmq-e891cd54{width: 936px !important;}}
@media (min-width: 1040px) and (max-width: 1247px){ .rmq-50254fc3{width: 936px !important;}}
@media (min-width: 1248px) and (max-width: 1455px){ .rmq-9517a58c{width: 936px !important;}}
@media (min-width: 1456px){ .rmq-d596a367{width: 936px !important;}}
@media (min-width: 768px) and (max-width: 831px){ .rmq-15640cdc{width: 1040px !important;}}
@media (min-width: 832px) and (max-width: 1039px){ .rmq-89b2910d{width: 1040px !important;}}
@media (min-width: 1040px) and (max-width: 1247px){ .rmq-b3aaa63a{width: 1040px !important;}}
@media (min-width: 1248px) and (max-width: 1455px){ .rmq-cb3106f5{width: 1040px !important;}}
@media (min-width: 1456px){ .rmq-9d88fe9e{width: 1040px !important;}}
@media (min-width: 768px) and (max-width: 831px){ .rmq-6ffc8619{width: 1144px !important;}}
@media (min-width: 832px) and (max-width: 1039px){ .rmq-26b4ee8{width: 1144px !important;}}
@media (min-width: 1040px) and (max-width: 1247px){ .rmq-1cf4813f{width: 1144px !important;}}
@media (min-width: 1248px) and (max-width: 1455px){ .rmq-9c0d2f0{width: 1144px !important;}}
@media (min-width: 1456px){ .rmq-2666965b{width: 1144px !important;}}
@media (min-width: 768px) and (max-width: 831px){ .rmq-d9739156{width: 1248px !important;}}
@media (min-width: 832px) and (max-width: 1039px){ .rmq-e1d1a2c7{width: 1248px !important;}}
@media (min-width: 1040px) and (max-width: 1247px){ .rmq-dcc57bb0{width: 1248px !important;}}
@media (min-width: 1248px) and (max-width: 1455px){ .rmq-2e8763ff{width: 1248px !important;}}
@media (min-width: 1456px){ .rmq-89c5614{width: 1248px !important;}}
@media (min-width: 768px) and (max-width: 831px){ .rmq-e41476bc{width: 1352px !important;}}
@media (min-width: 832px) and (max-width: 1039px){ .rmq-370024ad{width: 1352px !important;}}
@media (min-width: 1040px) and (max-width: 1247px){ .rmq-67dfff1a{width: 1352px !important;}}
@media (min-width: 1248px) and (max-width: 1455px){ .rmq-d8a1bbd5{width: 1352px !important;}}
@media (min-width: 1456px){ .rmq-986d29fe{width: 1352px !important;}}
@media (min-width: 768px) and (max-width: 831px){ .rmq-e12aadff{width: 1456px !important;}}
@media (min-width: 832px) and (max-width: 1039px){ .rmq-6f2cecce{width: 1456px !important;}}
@media (min-width: 1040px) and (max-width: 1247px){ .rmq-c5823e19{width: 1456px !important;}}
@media (min-width: 1248px) and (max-width: 1455px){ .rmq-9ef44e56{width: 1456px !important;}}
@media (min-width: 1456px){ .rmq-7dcad03d{width: 1456px !important;}}",
      }
    }
  />
</div>
`;

exports[`renders Column with passed styles correctly 1`] = `
<div
  data-radium={true}
>
  <div>
    <div
      className="rmq-5cd7f856 rmq-47404869 rmq-973b1098 rmq-9240b48f rmq-25d1aa40 rmq-9dca7bab"
      data-radium={true}
      style={
        Object {
          "color": "#ccc",
          "display": "block",
        }
      }
    />
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "@media (max-width: 767px){ .rmq-5cd7f856{display: block !important;
width: 100% !important;}}
@media (min-width: 768px) and (max-width: 831px){ .rmq-47404869{width: 312px !important;}}
@media (min-width: 832px) and (max-width: 1039px){ .rmq-973b1098{width: 312px !important;}}
@media (min-width: 1040px) and (max-width: 1247px){ .rmq-9240b48f{width: 312px !important;}}
@media (min-width: 1248px) and (max-width: 1455px){ .rmq-25d1aa40{width: 312px !important;}}
@media (min-width: 1456px){ .rmq-9dca7bab{width: 312px !important;}}",
      }
    }
  />
</div>
`;

exports[`renders Column without passed size correctly 1`] = `
<div
  data-radium={true}
>
  <div>
    <div
      className="rmq-5cd7f856 rmq-ac9c14ac rmq-3a274cbd rmq-b27e050a rmq-233fc1c5 rmq-50ca1bee"
      data-radium={true}
      style={
        Object {
          "display": "inline-block",
        }
      }
    />
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "@media (max-width: 767px){ .rmq-5cd7f856{display: block !important;
width: 100% !important;}}
@media (min-width: 768px) and (max-width: 831px){ .rmq-ac9c14ac{width: 104px !important;}}
@media (min-width: 832px) and (max-width: 1039px){ .rmq-3a274cbd{width: 104px !important;}}
@media (min-width: 1040px) and (max-width: 1247px){ .rmq-b27e050a{width: 104px !important;}}
@media (min-width: 1248px) and (max-width: 1455px){ .rmq-233fc1c5{width: 104px !important;}}
@media (min-width: 1456px){ .rmq-50ca1bee{width: 104px !important;}}",
      }
    }
  />
</div>
`;
